@@ -77,6 +77,7 @@
 	- fix: generate config file md5 as ascii, not binary (#62542).
 	- fix: queries that evaluated to "" incorrectly returned NULL.
 	- fix: packages produced by rpm-4.0 dinna merge signature tags.
+	- fix: rpmdb iterator memory leak in python bindings.
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
